--- a/NoteWork/Info.plist
+++ b/NoteWork/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Notework would like to access your photo library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Notework would like to access your photo library.</string>
 	<key>UILaunchStoryboardName</key>
